turtle.output
Terminals unused in grammar

   HATCH
   SOUP


Grammar

    0 $accept: program $end

    1 program: input

    2 input: %empty
    3      | input line

    4 line: cmd

    5 cmd: TURTLE ID
    6    | ID FORWARD NUM
    7    | ID NOTRAIL
    8    | ID TRAIL
    9    | ID TURTLECOLOR COLOR
   10    | ID RIGHT
   11    | ID LEFT
   12    | ID TURN NUM


Terminals, with rules where they appear

$end (0) 0
error (256)
NUM (258) 6 12
HATCH (259)
SOUP (260)
TURTLECOLOR (261) 9
COLOR (262) 9
TURTLE (263) 5
NOTRAIL (264) 7
TRAIL (265) 8
FORWARD (266) 6
RIGHT (267) 10
LEFT (268) 11
ID (269) 5 6 7 8 9 10 11 12
TURN (270) 12


Nonterminals, with rules where they appear

$accept (16)
    on left: 0
program (17)
    on left: 1, on right: 0
input (18)
    on left: 2 3, on right: 1 3
line (19)
    on left: 4, on right: 3
cmd (20)
    on left: 5 6 7 8 9 10 11 12, on right: 4


State 0

    0 $accept: . program $end

    $default  reduce using rule 2 (input)

    program  go to state 1
    input    go to state 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    1 program: input .
    3 input: input . line

    TURTLE  shift, and go to state 4
    ID      shift, and go to state 5

    $default  reduce using rule 1 (program)

    line  go to state 6
    cmd   go to state 7


State 3

    0 $accept: program $end .

    $default  accept


State 4

    5 cmd: TURTLE . ID

    ID  shift, and go to state 8


State 5

    6 cmd: ID . FORWARD NUM
    7    | ID . NOTRAIL
    8    | ID . TRAIL
    9    | ID . TURTLECOLOR COLOR
   10    | ID . RIGHT
   11    | ID . LEFT
   12    | ID . TURN NUM

    TURTLECOLOR  shift, and go to state 9
    NOTRAIL      shift, and go to state 10
    TRAIL        shift, and go to state 11
    FORWARD      shift, and go to state 12
    RIGHT        shift, and go to state 13
    LEFT         shift, and go to state 14
    TURN         shift, and go to state 15


State 6

    3 input: input line .

    $default  reduce using rule 3 (input)


State 7

    4 line: cmd .

    $default  reduce using rule 4 (line)


State 8

    5 cmd: TURTLE ID .

    $default  reduce using rule 5 (cmd)


State 9

    9 cmd: ID TURTLECOLOR . COLOR

    COLOR  shift, and go to state 16


State 10

    7 cmd: ID NOTRAIL .

    $default  reduce using rule 7 (cmd)


State 11

    8 cmd: ID TRAIL .

    $default  reduce using rule 8 (cmd)


State 12

    6 cmd: ID FORWARD . NUM

    NUM  shift, and go to state 17


State 13

   10 cmd: ID RIGHT .

    $default  reduce using rule 10 (cmd)


State 14

   11 cmd: ID LEFT .

    $default  reduce using rule 11 (cmd)


State 15

   12 cmd: ID TURN . NUM

    NUM  shift, and go to state 18


State 16

    9 cmd: ID TURTLECOLOR COLOR .

    $default  reduce using rule 9 (cmd)


State 17

    6 cmd: ID FORWARD NUM .

    $default  reduce using rule 6 (cmd)


State 18

   12 cmd: ID TURN NUM .

    $default  reduce using rule 12 (cmd)
